--- a/MeuSite/Refazendo meu site/estilos.css
+++ b/MeuSite/Refazendo meu site/estilos.css
@@ -1,25 +1,21 @@
 *{
     margin: 0;
     font-family: 'Rubik', sans-serif;
-    height:70px;
     text-decoration: none;
 }
 
 header{
     background-color: rgb(14, 13, 13);
     justify-content: space-between;   
-    /* padding: 20px; */
     height: 80px;
-    border-bottom: 1px solid rgb(200, 200, 200);
     position: sticky;
     top: 0;
   }
 
 body{
-    background-color: rgb(187, 187, 187);
+    background-color: rgb(0, 0, 0);
     height: 1000px;
 }
-
 
 #area-cabecalho{
     max-width: 1600px;
@@ -39,6 +35,10 @@ body{
     font-size: 45px;
 }
 
+.branco{
+    color: white;
+}
+
 .menu{
     position: absolute;
     top: 30px;
@@ -53,17 +53,55 @@ body{
 }
 
 .menu a:hover{
-    background-color: blue;
-    
+    background-color: blue;  
 }
 
-
 .main{
-    background-image: url(//MeuSite/img/22135.jpg);
-    padding: 100px 0;
+    background-image: url(../img/22135.jpg);
     padding-bottom: 200px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-  }
+    height: 600px;
+}
+
+.nav-superior{
+    border-bottom: 2px solid rgb(200, 200, 200);
+    width: 40px auto;
+    padding: 10px;
+    padding-top: 10px;
+    background-color: rgb(141, 8, 153);
+    text-align: center;
+}
+
+.nav-superior li{
+    display: inline;
+    list-style: none;
+    padding: 7px;
+    margin: 10px;
+}
+
+.nav-superior ul{
+    margin: 7px;
+}
+
+.nav-superior a{
+    color: white;
+    font-size: 18px;
+}
+
+a:hover{
+    background-color: rgb(221, 56, 236);
+    border-radius: 9px;
+}
+
+.direitos{   
+    background-color: black;
+    padding-top: 80px;
+}
+
+.direitos p{
+    color: rgb(255, 255, 255);
+    text-align: center;
+}
