--- a/MeuSite/Refazendo meu site/estilos.css
+++ b/MeuSite/Refazendo meu site/estilos.css
@@ -6,7 +6,6 @@
 
 header{
     background-color: rgb(14, 13, 13);
-    justify-content: space-between;   
     height: 80px;
     position: sticky;
     top: 0;
@@ -18,16 +17,15 @@ body{
 }
 
 #area-cabecalho{
-    max-width: 1600px;
     display: flex;
+    justify-content: space-between;
     flex-wrap: wrap;
 }
 
 
 .logo{
-    position: absolute;
-    top: 13px;
-    padding-left: 60px;
+    margin-left: 30px;
+    margin-top: 12px; 
 }
 
 .logo span{
@@ -43,9 +41,8 @@ body{
 }
 
 .menu{
-    position: absolute;
-    top: 30px;
-    right: 40px;
+    margin-top: 27px;
+    margin-right: 30px;
 }
 .menu a{
     background-color: rgb(141, 8, 153);
@@ -56,17 +53,18 @@ body{
 }
 
 .menu a:hover{
-    background-color: rgb(98, 0, 255);  
+    background-color: rgb(98, 0, 255); 
+    transition: 1s;
 }
 
 .main{
     background-image: url(../img/22135.jpg);
-    padding-bottom: 200px;
+    padding-bottom: 400px;
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    height: 600px;
+    height: 700px;
 }
 
 .nav-superior{
@@ -148,4 +146,26 @@ img{
     font-weight: bold;
 }
 
+#flex{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 
+}
+
+#flex div{
+    margin-left: 50px;
+    margin-right: 50px;
+    width: 200px;
+    height: 200px;
+    /* color: white; */
+    background-color: rgb(33, 0, 63);
+    text-align: center;
+    border-radius: 100%;
+}
+
+.html{
+    background-image: url(../img/);
+    background-position: center;
+    background-size: cover;
+}
