--- a/MeuSite/Refazendo meu site/estilos.css
+++ b/MeuSite/Refazendo meu site/estilos.css
@@ -149,23 +149,30 @@ img{
 #flex{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
-
+    justify-content: space-around;
 }
 
 #flex div{
-    margin-left: 50px;
-    margin-right: 50px;
     width: 200px;
     height: 200px;
-    /* color: white; */
-    background-color: rgb(33, 0, 63);
-    text-align: center;
-    border-radius: 100%;
+    /* border-radius: 100%; */
 }
 
-.html{
-    background-image: url(../img/);
+.img_html{
+    width: 30px;
+    background-image: url(../img/html5.png);
+    background-position: center;
+    background-size: cover; 
+}
+
+.img_css{
+    background-image: url(../img/css3.png);
+    background-position: center;
+    background-size: cover;
+}
+
+.img_js{
+    background-image: url(../img/js.png);
     background-position: center;
     background-size: cover;
 }
